--- a/index.html
+++ b/index.html
@@ -4,25 +4,222 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tanish Gift of Gratitude</title>
+
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Tanish Gift of Gratitude" />
+  <meta property="og:description" content="Custom handcrafted gifts made with love & gratitude." />
+  <meta property="og:image" content="sample1.jpg" />
+  <meta property="og:url" content="https://yourdomain.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX'); // Replace with your GA4 ID
+  </script>
+
   <style>
-    body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #ffe6f0; color: #4d0039; }
-    header, footer { background: #ff99cc; color: white; text-align: center; padding: 1rem; }
-    nav a { margin: 0 10px; color: white; text-decoration: none; font-weight: bold; }
-    .toggle-mode, .cart-icon, .whatsapp-float, .sort-options, .category-filter { margin: 1rem; }
-    .products { display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; padding: 1rem; }
-    .product { background: white; padding: 1rem; border-radius: 8px; width: 220px; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
-    .product img { max-width: 100%; border-radius: 6px; }
-    .cart-icon, .whatsapp-float { position: fixed; bottom: 20px; border-radius: 50%; padding: 15px; font-size: 20px; cursor: pointer; }
-    .cart-icon { right: 70px; background: #cc6699; color: white; }
-    .whatsapp-float { right: 20px; background: #25d366; color: white; }
-    .cart-modal, .order-modal { display: none; position: fixed; top: 10%; left: 50%; transform: translateX(-50%); background: white; padding: 1rem; border-radius: 8px; width: 90%; max-width: 500px; box-shadow: 0 0 20px rgba(0,0,0,0.2); z-index: 999; }
-    .contact-form, .feedback-form { padding: 1rem; max-width: 500px; margin: auto; }
-    .contact-form input, .contact-form textarea, .feedback-form input, .feedback-form textarea { width: 100%; margin: 0.5rem 0; padding: 0.5rem; border: 1px solid #ccc; border-radius: 6px; }
+    :root {
+      --bg-color: #ffe6f0;
+      --text-color: #4d0039;
+      --header-bg: #ff99cc;
+      --accent-color: #cc6699;
+      --white: #ffffff;
+    }
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: var(--bg-color);
+      color: var(--text-color);
+      transition: background-color 0.3s ease, color 0.3s ease;
+    }
+    body.dark {
+      --bg-color: #1e1e1e;
+      --text-color: #f5f5f5;
+      --header-bg: #333;
+      --accent-color: #ff66aa;
+    }
+    header {
+      background-color: var(--header-bg);
+      padding: 2rem;
+      text-align: center;
+      color: white;
+      position: sticky;
+      top: 0;
+      z-index: 999;
+    }
+    header img {
+      height: 120px;
+      margin-bottom: 10px;
+    }
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 3rem;
+      margin: 0.2rem 0;
+    }
+    nav {
+      margin-top: 1rem;
+    }
+    nav a {
+      margin: 0 15px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .toggle-mode {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+    }
+    main {
+      padding: 2rem;
+      text-align: center;
+    }
+    .cta {
+      margin-top: 2rem;
+    }
+    .cta a {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.8rem 1.5rem;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 2rem;
+      margin: 3rem 0;
+    }
+    .product {
+      background: var(--white);
+      border-radius: 12px;
+      padding: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .product img {
+      max-width: 100%;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+    }
+    .product:hover img {
+      transform: scale(1.05);
+    }
+    .product button {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.5rem 1rem;
+      border: none;
+      border-radius: 6px;
+      margin-top: 0.5rem;
+      cursor: pointer;
+    }
+    .cart-icon {
+      position: fixed;
+      bottom: 90px;
+      right: 20px;
+      background: var(--accent-color);
+      color: white;
+      padding: 12px 18px;
+      border-radius: 30px;
+      font-weight: bold;
+      z-index: 1001;
+      cursor: pointer;
+    }
+    .cart-modal {
+      position: fixed;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: var(--white);
+      padding: 2rem;
+      border-radius: 10px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.2);
+      display: none;
+      z-index: 1002;
+      width: 90%;
+      max-width: 400px;
+    }
+    .cart-modal h3 {
+      margin-top: 0;
+    }
+    .cart-modal ul {
+      list-style: none;
+      padding: 0;
+      text-align: left;
+    }
+    .cart-modal li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 0.5rem 0;
+    }
+    .cart-modal .qty-btns {
+      display: flex;
+      gap: 5px;
+    }
+    .cart-modal button {
+      padding: 5px 10px;
+      border: none;
+      border-radius: 4px;
+      background: var(--accent-color);
+      color: white;
+      cursor: pointer;
+    }
+    .contact-form {
+      margin-top: 2rem;
+      text-align: left;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .contact-form input, .contact-form textarea {
+      width: 100%;
+      padding: 0.6rem;
+      margin: 0.5rem 0;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+    .contact-form button {
+      background-color: var(--accent-color);
+      color: white;
+      padding: 0.7rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      border-radius: 50%;
+      padding: 15px;
+      font-size: 24px;
+      z-index: 1000;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <header>
+    <button class="toggle-mode" onclick="toggleMode()">🌓</button>
+    <img src="logo.png" alt="Tanish Gift of Gratitude Logo" />
     <h1>Tanish Gift of Gratitude</h1>
     <p>Gratitude, Handcrafted with Love</p>
     <nav>
@@ -32,174 +229,133 @@
     </nav>
   </header>
 
-  <div class="sort-options">
-    Sort By:
-    <select id="sortSelect" onchange="sortProducts()">
-      <option value="default">Default</option>
-      <option value="price">Price</option>
-      <option value="popularity">Popularity</option>
-    </select>
-  </div>
+  <main>
+    <h2>Welcome to Our World of Handcrafted Gifts</h2>
+    <p>Custom photo frames, art pieces, and meaningful creations crafted with love and gratitude.</p>
+    <div class="cta">
+      <a href="https://instagram.com/giftof_gratitude" target="_blank">Follow Us on Instagram</a>
+    </div>
 
-  <div class="category-filter">
-    Filter:
-    <button onclick="filterCategory('all')">All</button>
-    <button onclick="filterCategory('frames')">Frames</button>
-    <button onclick="filterCategory('albums')">Albums</button>
-    <button onclick="filterCategory('gifts')">Gifts</button>
-  </div>
+    <section id="products" class="products">
+      <div class="product" data-name="Custom Photo Frame" data-price="499">
+        <img src="sample1.jpg" alt="Custom Photo Frame" />
+        <h3>Custom Photo Frame</h3>
+        <p>A handcrafted photo frame made to preserve your memories beautifully.</p>
+        <p><strong>Price:</strong> ₹499</p>
+        <p>⭐️⭐️⭐️⭐️☆ (12 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Mini Scrapbook" data-price="299">
+        <img src="sample2.jpg" alt="Mini Scrapbook" />
+        <h3>Mini Scrapbook</h3>
+        <p>A pocket-sized book filled with love, perfect for gifting.</p>
+        <p><strong>Price:</strong> ₹299</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (8 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Name Plate Frame" data-price="599">
+        <img src="sample3.jpg" alt="Name Plate Frame" />
+        <h3>Name Plate Frame</h3>
+        <p>Elegant name plate designs with floral or wooden themes.</p>
+        <p><strong>Price:</strong> ₹599</p>
+        <p>⭐️⭐️⭐️⭐️☆ (15 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+      <div class="product" data-name="Anniversary Gift Frame" data-price="699">
+        <img src="sample4.jpg" alt="Anniversary Gift Frame" />
+        <h3>Anniversary Gift Frame</h3>
+        <p>Celebrate love with a personalized frame for special occasions.</p>
+        <p><strong>Price:</strong> ₹699</p>
+        <p>⭐️⭐️⭐️⭐️⭐️ (10 reviews)</p>
+        <button onclick="addToCart(this)">Add to Cart</button>
+      </div>
+    </section>
 
-  <section id="products" class="products">
-    <!-- Sample Products -->
-    <div class="product" data-name="Photo Frame" data-price="499" data-popularity="10" data-category="frames">
-      <img src="sample1.jpg" alt="Photo Frame">
-      <h3>Photo Frame</h3>
-      <p>Price: ₹499</p>
-      <button onclick="addToCart(this)">Add to Cart</button>
-    </div>
-    <div class="product" data-name="Mini Album" data-price="299" data-popularity="20" data-category="albums">
-      <img src="sample2.jpg" alt="Mini Album">
-      <h3>Mini Album</h3>
-      <p>Price: ₹299</p>
-      <button onclick="addToCart(this)">Add to Cart</button>
-    </div>
-    <div class="product" data-name="Gift Box" data-price="699" data-popularity="5" data-category="gifts">
-      <img src="sample3.jpg" alt="Gift Box">
-      <h3>Gift Box</h3>
-      <p>Price: ₹699</p>
-      <button onclick="addToCart(this)">Add to Cart</button>
-    </div>
-  </section>
+    <section id="contact">
+      <h2>Contact Indraja Balla</h2>
+      <p>Email: <a href="mailto:indrajapolasa@gmail.com">indrajapolasa@gmail.com</a></p>
+      <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" placeholder="Your Message" rows="4" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </section>
+  </main>
 
   <div class="cart-icon" onclick="toggleCart()">🛒 (<span id="cart-count">0</span>)</div>
-  <div class="cart-modal" id="cartModal">
+  <div class="cart-modal" id="cart-modal">
     <h3>Your Cart</h3>
-    <ul id="cartItems"></ul>
-    <p>Total: ₹<span id="cartTotal">0</span></p>
+    <ul id="cart-items"></ul>
+    <p><strong>Total:</strong> ₹<span id="cart-total">0</span></p>
     <button onclick="clearCart()">Clear Cart</button>
-    <button onclick="showOrderSummary()">Order Summary</button>
     <button onclick="toggleCart()">Close</button>
   </div>
 
-  <div class="order-modal" id="orderModal">
-    <h3>Order Summary</h3>
-    <ul id="orderItems"></ul>
-    <p>Total: ₹<span id="orderTotal"></span></p>
-    <h4>Payment</h4>
-    <p>Scan QR code or pay via UPI: tanish@upi</p>
-    <img src="payment-qr.png" alt="QR" width="150" />
-    <h4>Customer Info</h4>
-    <input type="text" placeholder="Name">
-    <input type="text" placeholder="Address">
-    <input type="text" placeholder="Phone">
-    <button onclick="confirmOrder()">Confirm Order</button>
-    <button onclick="document.getElementById('orderModal').style.display='none'">Close</button>
-  </div>
-
-  <section id="contact">
-    <h2>Contact</h2>
-    <form action="https://formsubmit.co/indrajapolasa@gmail.com" method="POST" class="contact-form">
-      <input type="text" name="name" placeholder="Your Name" required />
-      <input type="email" name="email" placeholder="Your Email" required />
-      <textarea name="message" placeholder="Your Message" required></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
-  <section id="feedback">
-    <h2>Feedback</h2>
-    <form class="feedback-form">
-      <input type="text" placeholder="Name" required>
-      <textarea placeholder="Your feedback..." required></textarea>
-      <button type="submit">Submit Feedback</button>
-    </form>
-  </section>
-
-  <footer><p>&copy; 2025 Tanish Gift of Gratitude</p></footer>
-
-  <a href="https://wa.me/919999999999" class="whatsapp-float">💬</a>
+  <a href="https://wa.me/919999999999" class="whatsapp-float" target="_blank">💬</a>
+  <footer><p>&copy; 2025 Tanish Gift of Gratitude. All rights reserved.</p></footer>
 
   <script>
     const cart = {};
 
-    function addToCart(btn) {
-      const product = btn.closest('.product');
-      const name = product.dataset.name;
-      const price = parseInt(product.dataset.price);
-      cart[name] = cart[name] ? { price, qty: cart[name].qty + 1 } : { price, qty: 1 };
-      updateCart();
+    function addToCart(button) {
+      const product = button.closest('.product');
+      const name = product.getAttribute('data-name');
+      const price = parseInt(product.getAttribute('data-price'));
+
+      if (cart[name]) {
+        cart[name].qty += 1;
+      } else {
+        cart[name] = { price, qty: 1 };
+      }
+      updateCartDisplay();
     }
 
-    function updateCart() {
-      const items = document.getElementById('cartItems');
+    function updateCartDisplay() {
+      const items = document.getElementById('cart-items');
       const count = document.getElementById('cart-count');
-      const total = document.getElementById('cartTotal');
+      const total = document.getElementById('cart-total');
       items.innerHTML = '';
-      let qty = 0, sum = 0;
-      for (let name in cart) {
+      let totalCount = 0;
+      let totalPrice = 0;
+
+      for (const name in cart) {
         const item = cart[name];
-        qty += item.qty;
-        sum += item.price * item.qty;
         const li = document.createElement('li');
-        li.innerText = `${name} - ₹${item.price} × ${item.qty}`;
+        li.innerHTML = 
+          ${name} - ₹${item.price} × ${item.qty}
+          <div class="qty-btns">
+            <button onclick="changeQty('${name}', -1)">-</button>
+            <button onclick="changeQty('${name}', 1)">+</button>
+          </div>;
         items.appendChild(li);
+        totalCount += item.qty;
+        totalPrice += item.qty * item.price;
       }
-      count.innerText = qty;
-      total.innerText = sum;
+
+      count.innerText = totalCount;
+      total.innerText = totalPrice;
+    }
+
+    function changeQty(name, delta) {
+      if (!cart[name]) return;
+      cart[name].qty += delta;
+      if (cart[name].qty <= 0) delete cart[name];
+      updateCartDisplay();
     }
 
     function clearCart() {
       for (let key in cart) delete cart[key];
-      updateCart();
+      updateCartDisplay();
     }
 
     function toggleCart() {
-      const modal = document.getElementById('cartModal');
+      const modal = document.getElementById('cart-modal');
       modal.style.display = modal.style.display === 'block' ? 'none' : 'block';
     }
 
-    function showOrderSummary() {
-      const orderItems = document.getElementById('orderItems');
-      const orderTotal = document.getElementById('orderTotal');
-      orderItems.innerHTML = '';
-      let total = 0;
-      for (let name in cart) {
-        const item = cart[name];
-        total += item.price * item.qty;
-        const li = document.createElement('li');
-        li.innerText = `${name} - ₹${item.price} × ${item.qty}`;
-        orderItems.appendChild(li);
-      }
-      orderTotal.innerText = total;
-      document.getElementById('orderModal').style.display = 'block';
-    }
-
-    function confirmOrder() {
-      alert('Thank you for your order! We will contact you shortly.');
-      clearCart();
-      document.getElementById('orderModal').style.display = 'none';
-    }
-
-    function sortProducts() {
-      const sort = document.getElementById('sortSelect').value;
-      const productList = Array.from(document.querySelectorAll('.product'));
-      const container = document.getElementById('products');
-      let sorted;
-      if (sort === 'price') {
-        sorted = productList.sort((a, b) => a.dataset.price - b.dataset.price);
-      } else if (sort === 'popularity') {
-        sorted = productList.sort((a, b) => b.dataset.popularity - a.dataset.popularity);
-      } else {
-        sorted = productList;
-      }
-      container.innerHTML = '';
-      sorted.forEach(p => container.appendChild(p));
-    }
-
-    function filterCategory(cat) {
-      document.querySelectorAll('.product').forEach(p => {
-        p.style.display = (cat === 'all' || p.dataset.category === cat) ? 'block' : 'none';
-      });
+    function toggleMode() {
+      document.body.classList.toggle('dark');
     }
   </script>
 </body>
